--- a/BethanysPieShop/Views/Shared/_Layout.cshtml
+++ b/BethanysPieShop/Views/Shared/_Layout.cshtml
@@ -14,6 +14,7 @@
                 <ul class="nav navbar-nav">
                     <li><a asp-controller="Home" asp-action="Index" class="nav-bar-brand">Bethany's Pie Shop</a></li>
                     <li><a asp-controller="Feedback" asp-action="Index">Feedback</a></li>
+                    <partial name="_LoginPartial" />
                 </ul>
             </div>
         </div>
@@ -24,5 +25,6 @@
             @RenderBody()
         </div>
     </div>
+    @RenderSection("Scripts", required: false)
 </body>
 </html>
